// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SyntaxHighlighter render as text if language doesnt exist 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            "print('hello')",
          ],
          "props": {},
          "type": "span",
        },
      ],
      "props": {
        "className": "language-text",
        "style": {
          "background": "none",
          "color": "black",
          "fontFamily": "Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace",
          "fontSize": "1em",
          "hyphens": "none",
          "lineHeight": "1.5",
          "tabSize": "4",
          "textAlign": "left",
          "textShadow": "0 1px white",
          "whiteSpace": "pre",
          "wordBreak": "normal",
          "wordSpacing": "normal",
          "wordWrap": "normal",
        },
      },
      "type": "code",
    },
  ],
  "props": {
    "style": {
      "background": "rgb(245, 242, 240)",
      "color": "black",
      "fontFamily": "Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace",
      "fontSize": "1em",
      "hyphens": "none",
      "lineHeight": "1.5",
      "margin": "0.5em 0px",
      "overflow": "auto",
      "padding": "1em",
      "tabSize": "4",
      "textAlign": "left",
      "textShadow": "0 1px white",
      "whiteSpace": "pre",
      "wordBreak": "normal",
      "wordSpacing": "normal",
      "wordWrap": "normal",
    },
  },
  "type": "pre",
}
`;

exports[`SyntaxHighlighter renders fortran highlighted text 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            "
",
          ],
          "props": {},
          "type": "span",
        },
        "            C AREA OF A TRIANGLE WITH A STANDARD SQUARE ROOT FUNCTION
",
        "            C INPUT - TAPE READER UNIT 5, INTEGER INPUT
",
        "            C OUTPUT - LINE PRINTER UNIT 6, REAL OUTPUT
",
        "            C INPUT ERROR DISPLAY ERROR OUTPUT CODE 1 IN JOB CONTROL LISTING
",
        "                READ INPUT TAPE 5, 501, IA, IB, IC
",
        "            501 FORMAT (3I5)
",
        "            C IA, IB, AND IC MAY NOT BE NEGATIVE OR ZERO
",
        "            C FURTHERMORE, THE SUM OF TWO SIDES OF A TRIANGLE
",
        "            C MUST BE GREATER THAN THE THIRD SIDE, SO WE CHECK FOR THAT, TOO
",
        "                IF (IA) 777, 777, 701
",
        "            701 IF (IB) 777, 777, 702
",
        "            702 IF (IC) 777, 777, 703
",
        "            703 IF (IA+IB-IC) 777, 777, 704
",
        "            704 IF (IA+IC-IB) 777, 777, 705
",
        "            705 IF (IB+IC-IA) 777, 777, 799
",
        "            777 STOP 1
",
        "            C USING HERON'S FORMULA WE CALCULATE THE
",
        "            C AREA OF THE TRIANGLE
",
        "            799 S = FLOATF (IA + IB + IC) / 2.0
",
        "                AREA = SQRTF( S * (S - FLOATF(IA)) * (S - FLOATF(IB)) *
",
        "                +     (S - FLOATF(IC)))
",
        "                WRITE OUTPUT TAPE 6, 601, IA, IB, IC, AREA
",
        "            601 FORMAT (4H A= ,I5,5H  B= ,I5,5H  C= ,I5,8H  AREA= ,F10.2,
",
        "                +        13H SQUARE UNITS)
",
        "                STOP
",
        "                END
",
        "                   ",
      ],
      "props": {
        "className": "language-fortran",
        "style": {
          "background": "none",
          "color": "black",
          "fontFamily": "Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace",
          "fontSize": "1em",
          "hyphens": "none",
          "lineHeight": "1.5",
          "tabSize": "4",
          "textAlign": "left",
          "textShadow": "0 1px white",
          "whiteSpace": "pre",
          "wordBreak": "normal",
          "wordSpacing": "normal",
          "wordWrap": "normal",
        },
      },
      "type": "code",
    },
  ],
  "props": {
    "style": {
      "background": "rgb(245, 242, 240)",
      "color": "black",
      "fontFamily": "Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace",
      "fontSize": "1em",
      "hyphens": "none",
      "lineHeight": "1.5",
      "margin": "0.5em 0px",
      "overflow": "auto",
      "padding": "1em",
      "tabSize": "4",
      "textAlign": "left",
      "textShadow": "0 1px white",
      "whiteSpace": "pre",
      "wordBreak": "normal",
      "wordSpacing": "normal",
      "wordWrap": "normal",
    },
  },
  "type": "pre",
}
`;

exports[`SyntaxHighlighter renders javascript highlighted text 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            "import React from "react";
",
          ],
          "props": {},
          "type": "span",
        },
        "import uniquePropHOC from "./lib/unique-prop-hoc";
",
        "
",
        "class Expire extends React.Component {
",
        "    constructor(props) {
",
        "        super(props);
",
        "        this.state = { component: props.children }
",
        "    }
",
        "    componentDidMount() {
",
        "        setTimeout(() => {
",
        "            this.setState({
",
        "                component: null
",
        "            });
",
        "        }, this.props.time || this.props.seconds * 1000);
",
        "    }
",
        "    render() {
",
        "        return this.state.component;
",
        "    }
",
        "}",
      ],
      "props": {
        "className": "language-javascript",
        "style": {
          "background": "none",
          "color": "black",
          "fontFamily": "Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace",
          "fontSize": "1em",
          "hyphens": "none",
          "lineHeight": "1.5",
          "tabSize": "4",
          "textAlign": "left",
          "textShadow": "0 1px white",
          "whiteSpace": "pre",
          "wordBreak": "normal",
          "wordSpacing": "normal",
          "wordWrap": "normal",
        },
      },
      "type": "code",
    },
  ],
  "props": {
    "style": {
      "background": "rgb(245, 242, 240)",
      "color": "black",
      "fontFamily": "Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace",
      "fontSize": "1em",
      "hyphens": "none",
      "lineHeight": "1.5",
      "margin": "0.5em 0px",
      "overflow": "auto",
      "padding": "1em",
      "tabSize": "4",
      "textAlign": "left",
      "textShadow": "0 1px white",
      "whiteSpace": "pre",
      "wordBreak": "normal",
      "wordSpacing": "normal",
      "wordWrap": "normal",
    },
  },
  "type": "pre",
}
`;

exports[`SyntaxHighlighter renders text while language loads 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            "
",
          ],
          "props": {},
          "type": "span",
        },
        "            C AREA OF A TRIANGLE WITH A STANDARD SQUARE ROOT FUNCTION
",
        "            C INPUT - TAPE READER UNIT 5, INTEGER INPUT
",
        "            C OUTPUT - LINE PRINTER UNIT 6, REAL OUTPUT
",
        "            C INPUT ERROR DISPLAY ERROR OUTPUT CODE 1 IN JOB CONTROL LISTING
",
        "                READ INPUT TAPE 5, 501, IA, IB, IC
",
        "            501 FORMAT (3I5)
",
        "            C IA, IB, AND IC MAY NOT BE NEGATIVE OR ZERO
",
        "            C FURTHERMORE, THE SUM OF TWO SIDES OF A TRIANGLE
",
        "            C MUST BE GREATER THAN THE THIRD SIDE, SO WE CHECK FOR THAT, TOO
",
        "                IF (IA) 777, 777, 701
",
        "            701 IF (IB) 777, 777, 702
",
        "            702 IF (IC) 777, 777, 703
",
        "            703 IF (IA+IB-IC) 777, 777, 704
",
        "            704 IF (IA+IC-IB) 777, 777, 705
",
        "            705 IF (IB+IC-IA) 777, 777, 799
",
        "            777 STOP 1
",
        "            C USING HERON'S FORMULA WE CALCULATE THE
",
        "            C AREA OF THE TRIANGLE
",
        "            799 S = FLOATF (IA + IB + IC) / 2.0
",
        "                AREA = SQRTF( S * (S - FLOATF(IA)) * (S - FLOATF(IB)) *
",
        "                +     (S - FLOATF(IC)))
",
        "                WRITE OUTPUT TAPE 6, 601, IA, IB, IC, AREA
",
        "            601 FORMAT (4H A= ,I5,5H  B= ,I5,5H  C= ,I5,8H  AREA= ,F10.2,
",
        "                +        13H SQUARE UNITS)
",
        "                STOP
",
        "                END
",
        "                   ",
      ],
      "props": {
        "className": "language-gherkin",
        "style": {
          "background": "none",
          "color": "black",
          "fontFamily": "Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace",
          "fontSize": "1em",
          "hyphens": "none",
          "lineHeight": "1.5",
          "tabSize": "4",
          "textAlign": "left",
          "textShadow": "0 1px white",
          "whiteSpace": "pre",
          "wordBreak": "normal",
          "wordSpacing": "normal",
          "wordWrap": "normal",
        },
      },
      "type": "code",
    },
  ],
  "props": {
    "style": {
      "background": "rgb(245, 242, 240)",
      "color": "black",
      "fontFamily": "Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace",
      "fontSize": "1em",
      "hyphens": "none",
      "lineHeight": "1.5",
      "margin": "0.5em 0px",
      "overflow": "auto",
      "padding": "1em",
      "tabSize": "4",
      "textAlign": "left",
      "textShadow": "0 1px white",
      "whiteSpace": "pre",
      "wordBreak": "normal",
      "wordSpacing": "normal",
      "wordWrap": "normal",
    },
  },
  "type": "pre",
}
`;

exports[`When the code split is loaded - SyntaxHighlighter renders jsx highlighted text 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            "import React from "react";
",
          ],
          "props": {},
          "type": "span",
        },
        "  import uniquePropHOC from "./lib/unique-prop-hoc";
",
        "
",
        "  class Expire extends React.Component {
",
        "      constructor(props) {
",
        "          super(props);
",
        "          this.state = { component: props.children }
",
        "      }
",
        "      componentDidMount() {
",
        "          setTimeout(() => {
",
        "              this.setState({
",
        "                  component: null
",
        "              });
",
        "          }, this.props.time || this.props.seconds * 1000);
",
        "      }
",
        "      render() {
",
        "          return this.state.component;
",
        "      }
",
        "  }",
      ],
      "props": {
        "className": "language-javascript",
        "style": {
          "background": "none",
          "color": "black",
          "fontFamily": "Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace",
          "fontSize": "1em",
          "hyphens": "none",
          "lineHeight": "1.5",
          "tabSize": "4",
          "textAlign": "left",
          "textShadow": "0 1px white",
          "whiteSpace": "pre",
          "wordBreak": "normal",
          "wordSpacing": "normal",
          "wordWrap": "normal",
        },
      },
      "type": "code",
    },
  ],
  "props": {
    "style": {
      "background": "rgb(245, 242, 240)",
      "color": "black",
      "fontFamily": "Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace",
      "fontSize": "1em",
      "hyphens": "none",
      "lineHeight": "1.5",
      "margin": "0.5em 0px",
      "overflow": "auto",
      "padding": "1em",
      "tabSize": "4",
      "textAlign": "left",
      "textShadow": "0 1px white",
      "whiteSpace": "pre",
      "wordBreak": "normal",
      "wordSpacing": "normal",
      "wordWrap": "normal",
    },
  },
  "type": "pre",
}
`;
